<resources>
    <string name="app_name">Artery</string>
    <string name="banner_ad_unit_id">ca-app-pub-2731350002741004/5246123570</string>
    <string name="app_id">ca-app-pub-2731350002741004~3769390371</string>

    <string name="action_done">Done</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_save">Save</string>
    <string name="action_color">Color Picker</string>
    <string name="action_brush">Brush Size</string>
    <string name="delete_drawing">Clear Canvas?</string>
    <string name="delete_drawing_small">You sure you wanna do that?</string>
    <string name="new_drawing_warning">Your current drawing will be completely erased, do you want to proceed?</string>
    <string name="action_redo">Redo</string>
    <string name="action_share">Share</string>
    <string name="label_brush_size">Brush Size:</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="edit_profile">View my profile</string>
    <string name="chat_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_filter">Filters</string>

    <string name="action_settings">Settings</string>
    <string name="action_draw">Draw</string>
    <string name="action_location">Location</string>
    <string name="action_chat">Chat</string>
    <string name="action_critique">Critique</string>
    <string name="action_gallery">My Gallery</string>
    <string name="action_edit">Edit</string>
    <string name="action_help">Help</string>
    <string name="logout"> Log out</string>

    <string name="new_match_notif">You matched with <b>%1$s</b></string>
    <string name="card_title"><b>%1$s</b>, <b>%2$s</b></string>
    <string name="send_message">Send <b>%1$s</b> a message</string>
    <string name="match_view_profile">View <b>%1$s</b>\'s profile</string>
    <string name="match">It\'s a match!</string>

    <string name="animTime">200</string>

    <string name="age">Age Preference</string>
    <string name="title_activity_profile">Profile</string>
    <string name="change_picture">Change my profile picture</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_empty">You don\'t have any saved drawings :(</string>
    <string name="saved">Drawing saved to phone</string>

    <string name="gallery_options_title">Options</string>
    <string-array name="gallery_options">
        <item>@string/set_as_card</item>peci
        <item>@string/edit</item>
        <item>@string/remove</item>
    </string-array>

    <string name="set_as_card">Set as my card</string>
    <string name="card_set">Card updated</string>
    <string name="edit">Open in the editor</string>
    <string name="remove">Remove from my gallery</string>

    <string name="pref_discover">Discoverable</string>
    <string name="pref_match_notif">New Matches</string>
    <string name="pref_message_notif">Messages</string>
    <string name="pref_notif">Notifications</string>
    <string name="profile_text">profile_text</string>
    <string name="profile_name">profile_name</string>
    <string name="default_profile_text">Tell everyone a little bit about yourself here.</string>
    <string name="directory">directory_name</string>
    <string name="profile_picture">profile_picture_address</string>
    <string name="title_activity_match_overlay">MatchOverlayActivity</string>

    <!-- Log in/first launch strings -->
    <string name="name_title">Hello,\nwhat\'s your name?</string>
    <string name="name_input">Name</string>
    <string name="age_input">Age</string>
    <string name="password_info">Your password must be at least 6 characters.</string>
    <string name="email_info">This email isn\'t valid.</string>
    <string name="email_taken">There\'s already an account with this email!</string>
    <string name="name_info">Your name must have at least 2 characters.</string>
    <string name="login_title">Create your login information</string>
    <string name="select_different_picture">Select another picture</string>
    <string name="min_age">You must be at least 18 to create an account.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="profile_picture_title">Create your profile</string>
    <string name="add_profile_picture">Add a profile picture</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login">Or, Log In</string>
    <string name="login_title2">Enter your login information</string>
    <string name="add_profile">Say something about yourself here</string>
    <string name="draw_title">Skip to drawing your first card</string>
    <string name="draw_subtitle">This is other users\' first impression of you.</string>
    <string name="authenticating">Authenticating</string>
    <string name="login_error">Error: please check your internet connection.</string>
    <string name="login_wrong">This email and password combination isn\'t associated with an account</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_neither">Nah</string>
    <string name="gender_error">Specify a sex</string>
    <string name="gender_error_detial">Please specify your sex before continuing. </string>

    <string name="help_title">Draw your first card</string>
    <string name="help_body">This is other user\'s first impression of you, and their first interaction with you. Get creative, and draw anything that represents you. </string>
    <string name="welcome_title">Welcome to Artery!</string>
    <string name="welcome_body">Swipe right on drawings you like. Swipe left on drawings you don\'t. A match occurs when you and the other person both like each other\'s drawings. To chat with matches, swipe right from the edge.</string>

    <string name="no_delete">Can\'t delete!</string>
    <string name="no_delete_body">You must have at least one drawing in your gallery so other users can see you.</string>

    <string name="gps_disabled">Artery needs to know your location so we can show you users around you. If you don\'t want to enable location, you can still see users from all around the world.</string>
    <string name="open_location_settings">Enable Location</string>
    <string name="cancel">No Thanks</string>
    <string name="checking_location">Updating your location&#8230;</string>

    <string name="out_of_users">That\'s everyone for now!</string>
    <string name="clear_seen">Reset Who You\'ve Swiped On</string>
    <string name="new_match">New Match!</string>

    <string name="set_age">Set Your New Age</string>
    <string name="set_gender">Set Your Sex</string>
    <string name="ok">OK</string>

    <string name="mssing_storage_perm">We need access to your storage to add a profile picture! The default one is nice too though.</string>

</resources>
