<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main" android:icon="@drawable/ic_critique"
            android:title="@string/action_critique" />
        <item android:id="@+id/nav_draw" android:icon="@drawable/ic_brush"
            android:title="@string/action_draw" />
        <item android:id="@+id/nav_chat" android:icon="@drawable/ic_chat"
            android:title="@string/action_chat" />
        <item android:id="@+id/nav_gallery" android:icon="@drawable/ic_gallery"
            android:title="@string/action_gallery" />

    </group>

        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
</menu>