<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notif"
        android:key="pref_notifications">
        <SwitchPreference
            android:key="pref_match_notif"
            android:title="@string/pref_match_notif"
            android:defaultValue="true"/>
        <SwitchPreference
            android:key="pref_message_notif"
            android:title="@string/pref_message_notif"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <Preference android:title="@string/clear_seen"
        android:key="@string/clear_seen"
        android:selectable="true" />
    <Preference android:title="@string/logout"
        android:key="@string/logout"
        android:selectable="true" />
</PreferenceScreen>