<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_title"
        android:layout_alignParentTop="true"
        android:id="@+id/name_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_login_title"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/input_profile"
        android:background="@drawable/edittext_background"
        android:hint="@string/add_profile"
        android:focusable="true"
        android:inputType="textMultiLine|textCapSentences"
        android:textColorHint="@color/black_overlay"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_xxnormal"
        android:layout_below="@id/name_title"
        android:imeOptions="actionDone"
        android:clipToPadding="false"
        android:layout_margin="16dp"
        android:layout_above="@+id/buttons_gender" />

    <Button
        android:id="@+id/button_profile_picture"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_above="@+id/button_skip"
        android:background="@drawable/edittext_background"
        android:textColor="@color/green"
        android:text="@string/add_profile_picture"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/edittext_background"
        android:textColor="@color/green"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/draw_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:id="@+id/buttons_gender"
        android:layout_above="@+id/button_profile_picture"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/button_gender_male"
            android:layout_width="0dp"
            android:scaleType="centerInside"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/gender_male"
            android:layout_weight=".333"
            android:background="@drawable/edittext_background"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="@color/lightGray"/>
        <Button
            android:id="@+id/button_gender_female"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/gender_female"
            android:layout_weight=".333"
            android:background="@drawable/edittext_background"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="@color/lightGray"/>
        <Button
            android:id="@+id/button_gender_neither"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/gender_neither"
            android:layout_weight=".333"
            android:background="@drawable/edittext_background"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textColor="@color/lightGray"/>

    </LinearLayout>
</RelativeLayout>