<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title2"
        android:layout_alignParentTop="true"
        android:id="@+id/login_title2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_login_title"
        android:layout_margin="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/login_input_email"
        android:hint="@string/email_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:height="60dp"
        android:layout_below="@id/login_title2"
        android:layout_marginBottom="8dp"
        android:layout_alignLeft="@id/login_title2"
        android:layout_alignStart="@id/login_title2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_input_password"
        android:hint="@string/password_hint"
        android:height="60dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@id/login_input_email"
        android:layout_alignLeft="@id/login_title2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/login_errorText"
        android:layout_below="@+id/login_input_password"
        android:layout_alignLeft="@+id/login_input_password"
        android:layout_alignStart="@+id/login_input_password"
        android:textColor="@android:color/white"
        android:visibility="invisible"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_below="@id/login_errorText"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/authenticating"
        android:id="@+id/authenticating2"
        android:textColor="@android:color/white"
        android:layout_below="@+id/progressBar2"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_error"
        android:id="@+id/login_loginError"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>



</RelativeLayout>