<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        android:layout_alignParentTop="true"
        android:id="@+id/name_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_login_title"
        android:layout_margin="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_name"
        android:hint="@string/name_input"
        android:focusable="true"
        android:inputType="textCapWords|textVisiblePassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_large"
        android:layout_below="@id/name_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_age"
        android:hint="@string/age_input"
        android:focusable="true"
        android:inputType="number"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_large"
        android:layout_below="@id/input_name"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/nameErrorText"
        android:layout_below="@id/input_age"
        android:layout_alignLeft="@+id/input_name"
        android:layout_alignStart="@+id/input_name"
        android:textColor="@android:color/white"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        style="?android:buttonBarButtonStyle"
        android:background="@drawable/edittext_background"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/login" />
</RelativeLayout>