<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture_title"
        android:layout_alignParentTop="true"
        android:id="@+id/name_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_login_title"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/input_profile"
        android:hint="About me"
        android:focusable="true"
        android:inputType="textMultiLine"
        android:textColorHint="@color/snow_white"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:textSize="@dimen/text_size_large"
        android:layout_below="@id/name_title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:imeOptions="actionDone"
        android:textCursorDrawable="@null"/>

    <Button
        android:id="@+id/button_profile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="48dp"
        android:layout_above="@+id/button_skip"
        style="?android:buttonBarButtonStyle"
        android:background="@android:color/white"
        android:textColor="@color/green"
        android:text="@string/add_profile_picture" />

    <Button
        android:id="@id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        style="?android:buttonBarButtonStyle"
        android:background="@android:color/white"
        android:textColor="@color/green"
        android:text="@string/draw_title" />
</RelativeLayout>